# sporty_web_app_testing

./: .gitignore  README.md  pyproject.toml
aqa/: enums.py
aqa/api/: __init__.py  client.py
aqa/config/: device_config.py
aqa/pages/: base_page.py  home_page.py  profile_page.py  result_page.py
aqa/pages/home_page/: __init__.py  home_page.py  home_page_locator.py
aqa/pages/result_page/: __init__.py
aqa/pages/streamer_profile_page/: __init__.py
aqa/utils/: actions.py  enums.py
tests/: conftest.py  test_ui.py
tests/api_tests/: test_api.py
tests/ui_tests/: conftest.py  test_demo.py
