[project]
name = "sporty-home-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin Stajnko"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pytest-playwright (>=0.7.1,<0.8.0)"
]

[tool.poetry]
packages = [
    { include = "aqa" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
