[project]
name = "sporty-home-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin Stajnko"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)",
    "pytest-playwright (>=0.7.1,<0.8.0)"
]

[tool.poetry]
packages = [
    { include = "aqa" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.18.2"
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true